--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,10 @@
 
 body {
     background: #ED213A;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #77131e, #93291E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #77131e, #93291E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: -webkit-linear-gradient(to right, #77131e, #E01518);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #77131e, #E01518); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    margin: 0;
+    padding: 0;
 }
 
 #container {
@@ -28,17 +29,24 @@ body {
     padding: 0 80px;
 }
 
+#devil img {
+    padding: 20px;
+    width: 220px;
+}
+
 .btn-bg {
-    margin: 40px;
-    padding: 10px;
+    margin: 20px;
     background-color: transparent;
     outline: none;
     border: none;
 }
 
 .btn-bg img {
-    padding: 0 40px;
-    width: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 110px;
+    width: 160px;
 }
 
 .btn-bg:hover {
