--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 #logo-juego {
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 #my-canvas {
@@ -27,7 +27,7 @@ body {
   }
   
 
-#devil {
+/* #devil {
     display: flex;
     padding: 0 80px;
 }
@@ -35,22 +35,16 @@ body {
 #devil img {
     padding: 20px;
     width: 220px;
-}
+} */
 
-.btn-bg {
-    margin: 20px;
-    background-color: transparent;
-    outline: none;
-    border: none;
-}
 
-.btn-bg img {
+/* .btn-bg img {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 110px;
     width: 160px;
-}
+} */
 
 .btn-bg:hover {
     cursor: pointer;
@@ -74,14 +68,34 @@ body {
     
 }
 
+.btn-bg {
+    width: 200px;
+}
+
 .btn-principal {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 450px;
+}
+
+.how-to-play {
+    margin-top: 80px;
+    font-size: 0.8em;
+    font-family: 'Press Start 2P', cursive;
+
+}
+
+hr {
+    border: 3px dashed black;
+    margin-bottom: 30px;
+    
 }
 
 #restart-btn, #pantalla-inicio, .btn-bg {
     background-color: #EBB302;
-    color: white;
+    /* color: white; */
     border: none;
     font-family: 'Press Start 2P', cursive;
     font-size: 0.6em;
