--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,10 +17,30 @@ body {
     align-items: center;
 }
 
+#name-container, #name {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    width: 350px;
+}
+
+#name {
+    border: none;
+    background-color: #ab0e11;
+    border-bottom: 6px solid black;
+    font-family: 'Press Start 2P', cursive;
+    color: black;
+}
+
+::placeholder {
+    color: black;
+}
+
 #logo-juego {
-    /* display: flex;
-    justify-content: center; */
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     margin-left: 5%;
 }
 
@@ -64,7 +84,7 @@ body {
 }
 
 .how-to-play {
-    margin-top: 80px;
+    margin-top: 60px;
     font-size: 0.8em;
     font-family: 'Press Start 2P', cursive;
 
