--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@ body {
 #my-canvas {
     margin-top: 30px;
     background-color: darkgray;
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.4);
 }
 
   
