--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ body {
 
 #my-canvas {
     margin-top: 30px;
-    background-color: darkgray;
+    background-color: #ab0e11;
     box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.4);
 }
 
